--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SQL</title>
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="topnav">
@@ -13,8 +13,9 @@
       <a href="#quiz">Quiz</a>
       <a href="#score">Scoreboard</a>
     </div> 
-    <img src="public/assets/Quiz.jpeg">
+    <img src="assets/Quiz.jpeg">
 
     <script src="index.js"></script>
+    {{{body}}}
   </body>
 </html>
