--- a/views/createQuiz.handlebars
+++ b/views/createQuiz.handlebars
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/quiz.css">
-</head>
-<body>
-    
-    <header>
-
-    </header>
-
-    <main>
         <form id="createQuizTable">
             <table>
-            <select href="./quiz.html" name="numQuestions" class="form-select" aria-label="Default select example">
+            <select name="numQuestions" class="form-select" aria-label="Default select example">
                 <option selected>Number of Questions</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -57,13 +41,3 @@
               <input class="btn btn-primary" type="submit" value="Submit">
             
           </form>
-
-    </main>
-
-    <footer>
-
-    </footer>
-
-    <script src="./assets/js/createQuiz.js"></script>
-</body>
-</html>
