--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SQL</title>
-    <link rel="stylesheet" href="style.css" />
+    {{!-- <link rel="stylesheet" href="../../public/css/style.css" />
+    <link rel="stylesheet" href="../../public/assets/css/quiz.css" /> --}}
   </head>
   <body>
     <div class="topnav">
@@ -13,9 +14,11 @@
       <a href="#quiz">Quiz</a>
       <a href="#score">Scoreboard</a>
     </div> 
-    <img src="assets/Quiz.jpeg">
+    {{!-- <img src="../../public/assets/Quiz.jpeg"> --}}
 
-    <script src="index.js"></script>
+   
     {{{body}}}
+
+     <script src="../../quiz_routes/index.js"></script>
   </body>
 </html>
