--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,6 @@
    
     {{{body}}}
 
-     <script src="../../quiz_routes/index.js"></script>
+     {{!-- <script src="../../quiz_routes/index.js"></script> --}}
   </body>
 </html>
