--- a/views/quiz.handlebars
+++ b/views/quiz.handlebars
@@ -1,6 +1,5 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <main>
         <form id="createQuizTable">
             <table>
             <select name="numQuestions" class="form-select" aria-label="Default select example">
@@ -45,9 +44,7 @@
             
           </form>
 
-
-    {{!-- <script src="../models/createQuiz.js"></script>
-    <script src="../models/quiz.js"></script> --}}
+  
+    <script src="/js/createQuiz.js"></script>
+    <script src="/js/quiz.js"></script>
     
-</body>
-</html>
