update before pull

--- a/views/quiz.handlebars
+++ b/views/quiz.handlebars
@@ -82,11 +82,11 @@
                 <option value="medium">Medium</option>
                 <option value="hard">Hard</option>
               </select>
-              <select name="type" class="form-select" aria-label="Default select example">
+              {{!-- <select name="type" class="form-select" aria-label="Default select example">
                 <option selected>Type</option>
                 <option value="multiple">Multiple Choice</option>
                 <option value="boolean">True/False</option>
-              </select>
+              </select> --}}
             </table>
             <br>
               <input class="btn btn-primary" type="submit" value="Submit">
