--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,23 @@
     <title>SQL</title>
     {{!-- <link rel='stylesheet' href='/css/jass.css' /> --}}
     <link rel='stylesheet' href='/css/style.css' />
+    <style>
+      header{
+        background-color: lightblue;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      header h1{
+        background-color: lightblue;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      body{
+        
+      }
+    </style>
   </head>
   <header id="snazzyHeader">
     <h1 id="snazzyHeader">Snazzy Quiz Lounge</h1>
@@ -19,10 +36,11 @@
       <a href="score" id = "score">Results</a>
     </div> 
     {{{body}}}
+    
   </div>
   <footer>
     
   </footer>
-     <script src="/js/script.js"></script>
+     <script src="/js/script.js" ></script>
   </body>
 </html>
