--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,21 @@
 
 header, #snazzyHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  height: 50px;
+  height: 80px;
   padding: 0;
   margin: 0;
+  
 }
 footer{
   height: 100px;
-  background-color: aqua;
+  background-color: lightblue;
 }
 h1, #quizH1, #quizTitle, #snazzyHeader{
   text-align: center;
-  margin: 20px;
+  /* margin: 20px; */
   font-family: 'Courier New', Courier, monospace;
   font-size: 32px;
   font-weight: 700;
@@ -76,24 +80,29 @@ body {
   background-color: hsl(214, 100%, 56%) !important;
   
 }
-body, html {
+html {
   height: 100%;
+}
+body{
+  background-image: url('../images/background1.png'); 
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
 }
 /* The hero image */
 .hero-image {
-/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-background-image: linear-gradient(rgba(0, 0, 0, 5), rgba(0, 0, 0, 0)), url(assets/Quiz.jpeg);
-
-/* Set a specific height */
-height: 85%;
-
-/* Position and center the image to scale nicely on all screens */
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
+  background-image: url('../images/SQLhero.png'); 
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  filter: blur(5px);
 }
-/* Place text in the middle of the image */
+
 .hero-text {
 text-align: center;
 position: absolute;
