--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <title>Home</title>
-    <link rel='stylesheet' href='/css/jass.css' />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel='stylesheet' href='/css/style.css' />
+    <style>
+      .form-control{
+        margin: 0 auto;
+        width: 40%;
+        border-collapse: collapse;
+      }
+      .btn{
+        margin-top: 10px;
+      }
+
+    </style>
   </head>
   <body>
     <h1>Login</h1>
-    <img src="assets/Quiz_2.jpeg">
-
+    <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+    <label for="inputPassword5" class="form-label">Password</label>
+    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+    <div id="passwordHelpBlock" class="form-text">
+      Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+  </div>
+  <input class="btn btn-primary" type="submit" value="Sign In">
+  <input class="btn btn-primary" type="submit" value="Create Account">
     {{!-- <script src="index.js"></script> --}}
-   
   </body>
 </html>
