created user object

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,20 @@
         margin: 0;
         padding: 0;
       }
+      #currentUser{
+        position: absolute;
+        top: 0 !important;
+        left: 0 !important;
+        margin: 5px !important;
+        font-size: 17px !important;
+        font-family: Verdana !important;
+        font-weight: 600 !important;
+        padding: 0 !important;
+        text-align: center !important;
+        height: 21px !important;
+        line-height: 21px !important;
+        
+      }
       body{
         
       }
@@ -27,6 +41,7 @@
   </head>
   <header id="snazzyHeader">
     <h1 id="snazzyHeader">Snazzy Quiz Lounge</h1>
+    <h3 id="currentUser"></h3>
   </header>
   <body>
     <div id="content">
