--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel='stylesheet' href='/css/style.css' />
     <style>
-      .form-control{
+      .form-control, .input-group{
         margin: 0 auto;
         width: 40%;
         border-collapse: collapse;
@@ -21,13 +21,16 @@
   <label for="exampleFormControlInput1" class="form-label">Email address</label>
   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 </div>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon1">@</span>
+  <input id="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+</div>
     <label for="inputPassword5" class="form-label">Password</label>
     <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
     <div id="passwordHelpBlock" class="form-text">
       Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
   </div>
-  <input class="btn btn-primary" type="submit" value="Sign In">
-  <input class="btn btn-primary" type="submit" value="Create Account">
-    {{!-- <script src="index.js"></script> --}}
+  <input id="signIn" class="btn btn-primary" type="submit" value="Sign In">
+  <input id="createAccount" class="btn btn-primary" type="submit" value="Create Account">
   </body>
 </html>
