added post request for data table search

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -32,5 +32,6 @@
   </div>
   <input id="signIn" class="btn btn-primary" type="submit" value="Sign In">
   <input id="createAccount" class="btn btn-primary" type="submit" value="Create Account">
+  <script src="/js/script.js" ></script>
   </body>
 </html>
