--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,6 +56,6 @@
   <footer>
     
   </footer>
-     <script src="/js/script.js" ></script>
+     <script src="/js/header.js"></script>
   </body>
 </html>
