--- a/views/score.handlebars
+++ b/views/score.handlebars
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Results</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel='stylesheet' href='/css/style.css' />
     <style>
 
         table {
@@ -32,11 +34,33 @@
         tr:hover {
             background-color: #ddd;
         }
+        #category-table12{
+            margin: 0 auto;
+            width: 30%;
+            border-collapse: collapse;            
+        }
     </style>
 </head>
 
 <body>
     <h1>Quiz Results</h1>
+              <form id="createQuizTable">
+            <table >
+              <select id="category-table12" name="category" class="form-select" aria-label="Default select example">
+                <option selected>Category</option>
+                <option value="20">Mythology</option>
+                <option value="21">Sports</option>
+                <option value="22">Geography</option>
+                <option value="23">History</option>
+                <option value="24">Politics</option>
+                <option value="25">Art</option>
+                <option value="26">Celebrities</option>
+                <option value="27">Animals</option>
+                <option value="28">Vehicles</option>
+              </select>
+            </table>
+              <input id="searchButton" class="btn btn-primary" type="submit" value="Search">
+          </form>
     <table>
         <thead>
             <tr>
@@ -55,6 +79,7 @@
             {{/each}}
         </tbody>
     </table>
+    <script src="/js/results.js"></script>
 </body>
 
 </html>
