added username field to score page

--- a/views/score.handlebars
+++ b/views/score.handlebars
@@ -39,6 +39,12 @@
             width: 30%;
             border-collapse: collapse;            
         }
+        #scoreUser{
+            margin: 0 auto;
+            width: 30%;
+            border-collapse: collapse;   
+            margin-top: 20px;         
+        }
     </style>
 </head>
 
@@ -58,6 +64,7 @@
                 <option value="27">Animals</option>
                 <option value="28">Vehicles</option>
               </select>
+              <input id="scoreUser" class="form-control" type="text" placeholder="Default input" aria-label="default input example">
             </table>
               <input id="searchButton" class="btn btn-primary" type="submit" value="Search">
           </form>
