--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -33,5 +33,6 @@
   <input id="signIn" class="btn btn-primary" type="submit" value="Sign In">
   <input id="createAccount" class="btn btn-primary" type="submit" value="Create Account">
   <script src="/js/script.js" ></script>
+  <script src="/js/psql.js"></script>
   </body>
 </html>
